# rs-pgdbsize2webdav

./: Cargo.toml  README.md  build.sh  check.sh  clippy.sh  doc.sh  rs-pgdbsize2webdav  run.sh  watch.sh
.sqlx/: query-082d2b187d42762875f00e89ace000cf03f3d4b49f9fd6559be754eea91b4ad4.json  query-4ef0ef07c9f63873d3f5c15b568e6809652ba8b03e4f3713051ea33eab7d8261.json  query-6cf6fcbb018e93cea4eaf726a724dba9d3e3fd76cad6585c1ec59a5a7f1d50c8.json
src/: lib.rs  main.rs
